fix nav height overflow

--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -101,7 +101,8 @@ nav {
 	flex-direction: column;
 	top: 0;
 	width: 75%;
-	height: 100%;
+	max-width: 300px;
+	height: 100vh;
 	background: var(--tertiary);
 	z-index: 1000;
 	transform: translateX(0);
@@ -110,7 +111,7 @@ nav {
 
 ul {
 	text-align: center;
-	height: 100%;
+	/* height: 100%; */
 }
 
 ul li {
